增加arcaea NS端解包CG

--- a/_config.yml
+++ b/_config.yml
@@ -280,6 +280,18 @@ myGallery:
     - /medias/featureimages/15.jpg
     - /medias/featureimages/16.jpg
     - /medias/featureimages/17.jpg
+    - /medias/arccg/1-1.jpg
+    - /medias/arccg/1-8.jpg
+    - /medias/arccg/1-ZR.jpg
+    - /medias/arccg/2-1.jpg
+    - /medias/arccg/2-8.jpg
+    - /medias/arccg/2-D.jpg
+    - /medias/arccg/3-1.jpg
+    - /medias/arccg/4-1.jpg
+    - /medias/arccg/4-7.jpg
+    - /medias/arccg/6-1.jpg
+    - /medias/arccg/6-6.jpg
+    - /medias/arccg/V-10.jpg
 
 
 # live2d
