--- a/_config.yml
+++ b/_config.yml
@@ -98,7 +98,7 @@ video:
   title: GLORY：ROAD
   url:  https://cdn.jsdelivr.net/gh/AshenOneYe/CDN@master/res/video/gloryroad.mp4 # url和iframeUrl其中一个必填
   iframeUrl: #在bilibili或者爱奇艺分享时选择iframe，然后填那个url来这里，sample: //player.bilibili.com/player.html?aid=669520137&bvid=BV1oa4y1L7mw&cid=234543483&page=1
-  pic: https://cdn.jsdelivr.net/gh/AshenOneYe/HexoBlog@master/medias/featureimages/17.jpg
+  pic: https://cdn.jsdelivr.net/gh/AshenOneYe/HexoBlog@master/medias/arccg/4-7.jpg
   thumbnails:
   height: # 如：400
   autoplay: false # 是否自动播放
@@ -207,7 +207,7 @@ clicklove:
 profile:
   avatar: /medias/avatar.jpg
   career: 安卓逆向小白
-  introduction: 本科毕业于山东大学软件工程学院，现为复旦大学电子信息在读研究生，系统软件与安全实验室成员，主攻安卓逆向。偶尔打打音游，刷刷明日方舟。
+  introduction: 本科山东大学，复旦大学硕士在读，主攻安卓逆向。SDVX雷电，ARCAEA ptt 11.68，明日方舟官服。
 
 # config my projects informations in about page.
 # If you don't want to display this `My Projects` content, you can deactivate or delete this configuration.
@@ -307,7 +307,7 @@ live2d:
     #看板娘样式设置
   live2dHeight: 340                        #看板娘高度，不需要单位
   live2dWidth: 250                         #看板娘宽度，不需要单位
-  waifuMinWidth: 'disable'                 #页面小于宽度小于指定数值时隐藏看板娘，例如 'disable'(禁用)，推荐 '1040px'
+  waifuMinWidth: '1040px'                 #页面小于宽度小于指定数值时隐藏看板娘，例如 'disable'(禁用)，推荐 '1040px'
   waifuEdgeSide: 'left:0'                 #看板娘贴边方向，例如 'left:0'(靠左 0px)，'right:30'(靠右 30px)，可以被下面的模型设置覆盖
 
 
@@ -512,18 +512,18 @@ featureImages:
 - /medias/featureimages/19.jpg
 - /medias/featureimages/20.jpg
 - /medias/featureimages/21.jpg
-- /arccg/1-1.jpg
-- /arccg/1-8.jpg
-- /arccg/1-ZR.jpg
-- /arccg/2-1.jpg
-- /arccg/2-8.jpg
-- /arccg/2-D.jpg
-- /arccg/3-1.jpg
-- /arccg/4-1.jpg
-- /arccg/4-7.jpg
-- /arccg/6-1.jpg
-- /arccg/6-6.jpg
-- /arccg/V-10.jpg
+- /medias/arccg/1-1.jpg
+- /medias/arccg/1-8.jpg
+- /medias/arccg/1-ZR.jpg
+- /medias/arccg/2-1.jpg
+- /medias/arccg/2-8.jpg
+- /medias/arccg/2-D.jpg
+- /medias/arccg/3-1.jpg
+- /medias/arccg/4-1.jpg
+- /medias/arccg/4-7.jpg
+- /medias/arccg/6-1.jpg
+- /medias/arccg/6-6.jpg
+- /medias/arccg/V-10.jpg
 # - /medias/featureimages/22.jpg
 # - /medias/featureimages/23.jpg
 
